Pull in real dynamic pet data

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h2 class="page-section-title">Meet Our Friends</h2>
         <div class="pet-filter">
           <p>Show me:
-            <button data-filter="all">All Pets</button>
+            <button class="active" data-filter="all">All Pets</button>
             <button data-filter="dog">Only Dogs</button>
             <button data-filter="cat">Only Cats</button>
           </p>
